# visa-bot

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_provider_credentials.py
app/: config.py  logging.py  main.py
app/bot/: dispatcher.py  handlers_booking.py  handlers_menu.py  handlers_monitoring.py  handlers_settings.py  handlers_start.py  handlers_vfs_token.py  keyboards.py  states.py
app/db/: crud.py  models.py  session.py
app/providers/: base.py  bls_spain.py  generic_playwright.py  mock.py  registry.py  schemas.py  tlscontact.py  vfs_global.py
app/tasks/: beat.py  book.py  celery_app.py  monitor.py  vfs_token_refresh.py
app/utils/: backoff.py  crypto.py  hashing.py  i18n.py
tests/: conftest.py  test_crud.py  test_crypto.py  test_hashing.py  test_monitor.py
