[project]
name = "visa-bot"
version = "0.1.0"
description = "Telegram bot for visa appointment slot monitoring and auto-booking"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "psycopg2-binary>=2.9,<3",
    "alembic>=1.14,<2",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0,<3",
    "celery[redis]>=5.4,<6",
    "redis>=5.0,<6",
    "playwright>=1.49,<2",
    "structlog>=24.0",
    "cryptography>=44.0,<45",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "aiosqlite>=0.20,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
